--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Peña El Taladro Mar del Plata</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./imagenes/Escudo-de-Banfield.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -590,12 +591,13 @@
                     </tr>
 
                 </table>
-                <div class="media">
-                    <iframe width="425" height="215" src="https://www.youtube.com/embed/fsuWqMIuloY"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                </div>
+
+            </div>
+            <div class="media">
+                <iframe width="425" height="215" src="https://www.youtube.com/embed/fsuWqMIuloY"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </aside>
         <main class="principal">
